@@ -1,3 +1,9 @@
+2010-08-25  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>
+
+	* src/libYARP_OS/src/Network.cpp: clean up global name client
+	object, and temporary carrier objects in metaConnect (thanks 
+	Vadim Tikhanoff for catching these!).
+
 2010-08-24  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>
 
 	* src/libYARP_OS/src/Election.cpp: fix a race condition in
